libjxl: update to 0.10.1

--- a/graphics/libjxl/Portfile
+++ b/graphics/libjxl/Portfile
@@ -5,7 +5,7 @@ PortGroup           github 1.0
 PortGroup           cmake 1.0
 PortGroup           compiler_blacklist_versions 1.0
 
-github.setup        libjxl libjxl 0.10.0 v
+github.setup        libjxl libjxl 0.10.1 v
 categories          graphics
 maintainers         {jmr @jmroot}
 license             BSD
@@ -22,8 +22,8 @@ master_sites-append sourceforge:project/macports/distfiles/${name}:skcms
 # https://skia.googlesource.com/skcms/+archive/${skcms_commit}.tar.gz?dummy=
 distfiles-append    skcms-${skcms_commit}${extract.suffix}:skcms
 checksums           ${name}-${version}${extract.suffix} \
-                        rmd160 d21d8f58b8092714b58fc17f7753482b53e08c60 \
-                        sha256 ab32d52b033c814d24762db4942a3b45315d9db37bf5c8a9741ccc1bb0a52d97 \
+                        rmd160 53702ac96e8244e08bcfbafb19c23b3284002f28 \
+                        sha256 91b9a83a230d608b5d35d2ab5068bd0ec7028797575e3013211be5928028c8cd \
                     skcms-${skcms_commit}${extract.suffix} \
                         rmd160 441c5313197732e0756df440be91bd813a994c20 \
                         sha256 1ee4607d6fbcad26759fcbc95a6dcdccf3dfc1e55a5ca748e7853f9fb97b28ee
@@ -32,13 +32,11 @@ depends_build-append \
                     port:asciidoc \
                     port:pkgconfig
 depends_lib         port:brotli \
+                    port:giflib5 \
                     port:highway \
                     path:include/turbojpeg.h:libjpeg-turbo \
                     port:libpng \
                     port:openexr
-
-# currently broken
-# port:giflib5
 
 extract.only        ${name}-${version}${extract.suffix}
 post-extract {
@@ -67,10 +65,9 @@ configure.args-append \
                     -DJPEGXL_ENABLE_SKCMS=YES \
                     -DJPEGXL_FORCE_SYSTEM_BROTLI=YES \
                     -DJPEGXL_FORCE_SYSTEM_HWY=YES \
-                    -DASCIIDOC:FILEPATH=${prefix}/bin/a2x
-
-#                    -DGIF_INCLUDE_DIR:FILEPATH=${prefix}/include/giflib5 \
-#                    -DGIF_LIBRARY:FILEPATH=${prefix}/lib/giflib5/lib/libgif.dylib
+                    -DASCIIDOC:FILEPATH=${prefix}/bin/a2x \
+                    -DGIF_INCLUDE_DIR:FILEPATH=${prefix}/include/giflib5 \
+                    -DGIF_LIBRARY:FILEPATH=${prefix}/lib/giflib5/lib/libgif.dylib
 
 compiler.cxx_standard   2011
 # Compilation warning (from highway headers):
