R: disable aqua for now on < 10.10
See: https://trac.macports.org/ticket/69437

--- a/math/R/Portfile
+++ b/math/R/Portfile
@@ -173,6 +173,12 @@ if {${os.platform} eq "darwin" && ${os.major} < 13} {
     configure.args-append   --disable-openmp
 }
 
+# Temporary fix for: https://bugs.r-project.org/show_bug.cgi?id=18683
+# See: https://trac.macports.org/ticket/69437
+if {${os.platform} eq "darwin" && ${os.major} < 14} {
+    configure.args-append   --without-aqua
+}
+
 platform darwin 13 {
     configure.cflags-append -flax-vector-conversions
 }
