--- a/devel/xapian-core/Portfile
+++ b/devel/xapian-core/Portfile
@@ -182,7 +182,7 @@ foreach v {8.0 8.1 8.2} {
 }
 
 # Python
-foreach v {2.7 3.6 3.7 3.8 3.9 3.10 3.11} {
+foreach v {2.7 3.7 3.8 3.9 3.10 3.11} {
     set v_no_dot [string map {. {}} ${v}]
     if {[vercmp ${v} 3] >= 0} {
         set suffix 3
