kicad: Upgrade to 8.0.1

--- a/science/kicad/Portfile
+++ b/science/kicad/Portfile
@@ -7,7 +7,7 @@ PortGroup           boost 1.0
 PortGroup           legacysupport 1.1
 
 name                kicad
-version             7.0.10
+version             8.0.1
 description         KiCad is an electronic design automation software suite
 long_description    KiCad is an EDA software suite for the creation of professional schematics \
                     and printed circuit boards up to 32 copper layers with additional technical layers.
@@ -30,13 +30,14 @@ if {${name} eq ${subport}} {
 
     gitlab.setup        kicad/code kicad ${version}
 
-    checksums           rmd160  0902e2ce3ffd94d071ff2c4c39f6e9b7eecad915 \
-                        sha256  96164051ead3c43543a411ce0f9a7837336e5243b4c9bf921e4844a652b634ca \
-                        size    43991960
-    revision            1
+    checksums           rmd160  86f6fec4eaabe36ea65c9403d183c3e4bcc9fd6d \
+                        sha256  7ea3f18650ce1b5359c685d10245efd95f87fa42ee52a1585bbc22d957617928 \
+                        size    72453098
+    revision            0
 
     patchfiles-append \
         macports_prefix.patch \
+        common-paths.cpp.patch \
         0001-cmake-adding-KICAD_MACOSX_APP_BUNDLE-option.patch \
         0002-disable-codesigning.patch
 
@@ -50,6 +51,7 @@ if {${name} eq ${subport}} {
         port:python${py_ver_no_dot} \
         port:glew \
         port:glm \
+        port:libgit2 \
         port:curl \
         port:ngspice \
         port:opencascade \
@@ -121,6 +123,7 @@ if {${name} eq ${subport}} {
 }
 
 subport kicad-docs {
+    version             8.0.0-rc3
     supported_archs     noarch
     platforms           any
     description         KiCad documentation
@@ -131,9 +134,9 @@ subport kicad-docs {
     master_sites        https://kicad-downloads.s3.cern.ch/docs
     distname            ${name}-doc-${version}
 
-    checksums           rmd160  417797fcc37a7aabaa9c0ad7030102f15ba309fb \
-                        sha256  5f48e580e9e917e9442d7a3b2a500e921d1e6e5f80f77efdd1629dbe555ca77a \
-                        size    694461148
+    checksums           rmd160  5f16c1bbb194b3085fca7f64d8ebab82f8906cf1 \
+                        sha256  accc555691321a20185c01f37af55d5ede8f46b5662762c47d53a0f496094e48 \
+                        size    394345740
 
     use_configure       no
 
@@ -153,10 +156,9 @@ subport kicad-symbols {
 
     gitlab.setup        kicad/libraries kicad-symbols ${version}
 
-    checksums           rmd160  6929b8becfecb70cec513a6187457ae6df56e324 \
-                        sha256  510c145d07fea3d57097783208f7befa2aff4e087dc2d684f623710b829585d5 \
-                        size    3119612
-
+    checksums           rmd160  a9bbdcc2b01915170fed4acfceb07fd1bee42bb1 \
+                        sha256  f6cad087b889285aeebdc80cb6ab1b1fe65cc08e653663d4aab5f3d749816796 \
+                        size    3639516
 
     patchfiles-append   kicad_libraries_cmakelists.txt.patch
 }
@@ -169,9 +171,9 @@ subport kicad-footprints {
 
     gitlab.setup        kicad/libraries kicad-footprints ${version}
 
-    checksums           rmd160  d8ba6585b550b5e57ffcc1a0a497ee8634b50452 \
-                        sha256  369771dd04e36c7bd4e24e82526db0a1972b0a4f721eb12f664c010ae99ec290 \
-                        size    24478270
+    checksums           rmd160  712d13dfbbbfaded11d03e86f8e9f38dc6f3aa42 \
+                        sha256  2457dccca2bd97971be1dcc1045f20ca2804c938dc523905d4eaa15d75cd4228 \
+                        size    26591094
 
     patchfiles-append   kicad_libraries_cmakelists.txt.patch
 }
@@ -184,9 +186,9 @@ subport kicad-packages3D {
 
     gitlab.setup        kicad/libraries kicad-packages3D ${version}
 
-    checksums           rmd160  f16d8a686b16d5665efd02c8f2c9cdc4f93aed2f \
-                        sha256  9ca3119afe9d3d99bd7ef540471a13092d423f6fda88e661388c0b6ced65c072 \
-                        size    773216530
+    checksums           rmd160  f7b49fe393b276e1dd88d14a04a1bb0580172678 \
+                        sha256  b980d86904ec386638ad8e12fa9ba1fd0e72a431d7fc92d4bccf2f6f82a7a097 \
+                        size    773486331
 
     patchfiles-append   kicad_libraries_cmakelists.txt.patch
 }
@@ -199,9 +201,9 @@ subport kicad-templates {
 
     gitlab.setup        kicad/libraries kicad-templates ${version}
 
-    checksums           rmd160  8373a4b10015abb83c36bb1feedc387ee8a60c63 \
-                        sha256  b55381038863ebe627c4c2552c36ad7eeab0ae36861a2ce0aa56c9b334cad8fe \
-                        size    1347681
+    checksums           rmd160  b503f8ac071e2feff4421c3255e9b4b0649916ee \
+                        sha256  23df1665ccdd9b9a753313d93e2e1088da2e53fc97fb7210bf7f551973b01efe \
+                        size    1347686
 
     patchfiles-append   kicad_libraries_cmakelists.txt.patch
 }
