R: new aqua variant

--- a/math/R/Portfile
+++ b/math/R/Portfile
@@ -9,7 +9,7 @@ name                        R
 # Remember to set revision to 0 when bumping version
 # And also to update Rversion in R PortGroup
 version                     4.3.3
-revision                    0
+revision                    1
 
 set branch                  [join [lrange [split ${version} .] 0 1] .]
 categories                  math science
@@ -157,6 +157,7 @@ configure.args              --disable-openmp \
                             --enable-memory-profiling \
                             --enable-R-shlib \
                             --enable-BLAS-shlib \
+                            --without-aqua \
                             --without-tcltk \
                             --without-cairo \
                             --disable-java \
@@ -171,12 +172,6 @@ configure.env-append        ac_cv_path_TEX= \
 
 if {${os.platform} eq "darwin" && ${os.major} < 13} {
     configure.args-append   --disable-openmp
-}
-
-# Temporary fix for: https://bugs.r-project.org/show_bug.cgi?id=18683
-# See: https://trac.macports.org/ticket/69437
-if {${os.platform} eq "darwin" && ${os.major} < 14} {
-    configure.args-append   --without-aqua
 }
 
 platform darwin 13 {
@@ -262,7 +257,12 @@ variant x11 conflicts quartz {
                             --x-lib=${prefix}/lib
 }
 
-variant quartz conflicts x11 {
+variant aqua description {Enable native macOS graphics support, needed by R.app and quartz variant} {
+    configure.args-replace  --without-aqua \
+                            --with-aqua
+}
+
+variant quartz requires aqua conflicts x11 {
     require_active_variants tk quartz
     notes-append "
         Note that R with quartz variant will not work with R.app because\
@@ -279,6 +279,12 @@ default_variants +cairo +tcltk +openmp
 
 if {![variant_isset quartz]} {
     default_variants-append +x11
+}
+
+# Version 4.3.3 with aqua won't build on 10.9
+# See: https://trac.macports.org/ticket/69437
+if {${os.platform} eq "darwin" && ${os.major} >= 14} {
+    default_variants-append +aqua
 }
 
 if {[variant_isset cairo] && [variant_isset x11]} {
