R-app: requires R with aqua variant

--- a/math/R-app/Portfile
+++ b/math/R-app/Portfile
@@ -2,6 +2,7 @@
 
 PortSystem              1.0
 PortGroup               xcode 1.0
+PortGroup               active_variants 1.1
 
 name                    R-app
 
@@ -12,7 +13,7 @@ if {${os.platform} eq "darwin" && ${os.major} > 12} {
     # Version for older systems, including PPC. 1.73 still builds but freezes on quit.
     version             1.72
 }
-revision                1
+revision                2
 set rel_r_ver           4.3.2
 # The version of R when this version of R-app was released, used for changing version
 # info of app bundle to match the actual R version. Should be updated for each R-app release,
@@ -31,6 +32,8 @@ master_sites            http://cran.rstudio.com/bin/macosx/ \
                         http://cran.us.r-project.org/bin/macosx/
 
 distname                Mac-GUI-${version}
+
+require_active_variants R aqua
 
 if {${os.platform} eq "darwin" && ${os.major} > 12} {
     checksums           ${distname}.tar.gz \
