--- a/lang/php/Portfile
+++ b/lang/php/Portfile
@@ -186,11 +186,11 @@ switch ${subport_branch} {
     }
     8.3 {
         epoch           2
-        version         8.3.2
+        version         8.3.3
         use_xz          yes
-        checksums       rmd160  1c2e72daf36f269cb8835a5b0223cc1e43964e6c \
-                        sha256  4ffa3e44afc9c590e28dc0d2d31fc61f0139f8b335f11880a121b9f9b9f0634e \
-                        size    12440200
+        checksums       rmd160  732d3fcc241400ec47cb4b12ca16d96d216960eb \
+                        sha256  b0a996276fe21fe9ca8f993314c8bc02750f464c7b0343f056fb0894a8dfa9d1 \
+                        size    12463880
     }
     8.4 {
         # When this becomes a stable version, remove the overrides for homepage,
@@ -449,7 +449,7 @@ subport ${php} {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     depends_run             port:php_select
@@ -610,7 +610,7 @@ subport ${php}-apache2handler {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     description             ${php} Apache 2 Handler SAPI
@@ -674,7 +674,7 @@ subport ${php}-cgi {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     description             ${php} CGI SAPI
@@ -718,7 +718,7 @@ subport ${php}-fpm {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     description             ${php} FPM SAPI
@@ -791,7 +791,7 @@ subport ${php}-calendar {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     description             a PHP extension for converting between different \
@@ -815,7 +815,7 @@ subport ${php}-curl {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     categories-append       net www
@@ -855,7 +855,7 @@ subport ${php}-dba {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     categories-append       databases
@@ -891,7 +891,7 @@ subport ${php}-enchant {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     categories-append       textproc devel
@@ -944,7 +944,7 @@ subport ${php}-exif {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     categories-append       graphics
@@ -961,7 +961,7 @@ subport ${php}-ffi {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     categories-append       devel
@@ -993,7 +993,7 @@ subport ${php}-ftp {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     categories-append       net
@@ -1031,7 +1031,7 @@ subport ${php}-gd {
         8.0.30              {revision 0}
         8.1.27              {revision 1}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     categories-append       graphics
@@ -1059,7 +1059,7 @@ subport ${php}-gd {
         depends_lib-append  port:webp
     }
 
-    if {[vercmp ${branch} >= 8.1]} {
+    if {[vercmp ${branch} >= 8.1] && [vercmp ${branch} < 8.3]} {
         patchfiles-append       patch-${php}-ext-gd.diff
     }
 
@@ -1105,7 +1105,7 @@ subport ${php}-gettext {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     categories-append       devel
@@ -1135,7 +1135,7 @@ subport ${php}-gmp {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     categories-append       devel math
@@ -1170,7 +1170,7 @@ subport ${php}-iconv {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     categories-append       textproc
@@ -1200,7 +1200,7 @@ subport ${php}-imap {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     categories-append       mail
@@ -1241,7 +1241,7 @@ subport ${php}-intl {
         8.0.30              {revision 1}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     categories-append       devel
@@ -1304,7 +1304,7 @@ subport ${php}-ipc {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     php.extensions          shmop sysvmsg sysvsem sysvshm
@@ -1330,7 +1330,7 @@ subport ${php}-ldap {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     categories-append       databases
@@ -1370,7 +1370,7 @@ subport ${php}-mbstring {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     categories-append       textproc
@@ -1461,7 +1461,7 @@ subport ${php}-mysql {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     php.extensions          mysqli pdo_mysql
@@ -1657,7 +1657,7 @@ subport ${php}-odbc {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     php.extensions          odbc pdo_odbc
@@ -1721,7 +1721,7 @@ if {[vercmp ${branch} >= 5.5]} {
             8.0.30              {revision 0}
             8.1.27              {revision 0}
             8.2.15              {revision 0}
-            8.3.2               {revision 0}
+            8.3.3               {revision 0}
         }
 
         php.extensions.zend opcache
@@ -1777,7 +1777,7 @@ subport ${php}-openssl {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     categories-append       devel security
@@ -1834,7 +1834,7 @@ subport ${php}-oracle {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     php.extensions          oci8 pdo_oci
@@ -1876,7 +1876,7 @@ subport ${php}-pcntl {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     categories-append       sysutils
@@ -1909,7 +1909,7 @@ subport ${php}-posix {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     categories-append       sysutils
@@ -1936,7 +1936,7 @@ subport ${php}-postgresql {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     php.extensions          pgsql pdo_pgsql
@@ -2082,7 +2082,7 @@ subport ${php}-pspell {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     categories-append       textproc
@@ -2112,7 +2112,7 @@ subport ${php}-snmp {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     categories-append       sysutils
@@ -2142,7 +2142,7 @@ subport ${php}-soap {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     categories-append       net
@@ -2175,7 +2175,7 @@ subport ${php}-sockets {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     categories-append       net
@@ -2195,7 +2195,7 @@ subport ${php}-sodium {
         8.0.30              {revision 1}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     php.extensions          sodium
@@ -2234,7 +2234,7 @@ subport ${php}-sqlite {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     php.extensions          sqlite sqlite3 pdo_sqlite
@@ -2286,7 +2286,7 @@ subport ${php}-tidy {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     categories-append       www
@@ -2391,7 +2391,7 @@ subport ${php}-xsl {
         8.0.30              {revision 0}
         8.1.27              {revision 0}
         8.2.15              {revision 0}
-        8.3.2               {revision 0}
+        8.3.3               {revision 0}
     }
 
     categories-append       textproc
