--- a/lang/php/Portfile
+++ b/lang/php/Portfile
@@ -178,11 +178,11 @@ switch ${subport_branch} {
     }
     8.2 {
         epoch           2
-        version         8.2.15
+        version         8.2.16
         use_xz          yes
-        checksums       rmd160  d5389dced7dee4b7252702dc3463412199b1ccf7 \
-                        sha256  eca5deac02d77d806838275f8a3024b38b35ac0a5d9853dcc71c6cbe3f1f8765 \
-                        size    12075384
+        checksums       rmd160  1b1edbd6135737ea030110f66cf6c8d40b7568ae \
+                        sha256  28cdc995b7d5421711c7044294885fcde4390c9f67504a994b4cf9bc1b5cc593 \
+                        size    12085228
     }
     8.3 {
         epoch           2
@@ -448,7 +448,7 @@ subport ${php} {
         7.4.33              {revision 1}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -609,7 +609,7 @@ subport ${php}-apache2handler {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -673,7 +673,7 @@ subport ${php}-cgi {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -717,7 +717,7 @@ subport ${php}-fpm {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -790,7 +790,7 @@ subport ${php}-calendar {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -814,7 +814,7 @@ subport ${php}-curl {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -854,7 +854,7 @@ subport ${php}-dba {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -890,7 +890,7 @@ subport ${php}-enchant {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -943,7 +943,7 @@ subport ${php}-exif {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -960,7 +960,7 @@ subport ${php}-ffi {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -992,7 +992,7 @@ subport ${php}-ftp {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -1030,7 +1030,7 @@ subport ${php}-gd {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 1}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -1059,7 +1059,7 @@ subport ${php}-gd {
         depends_lib-append  port:webp
     }
 
-    if {[vercmp ${branch} >= 8.1] && [vercmp ${branch} < 8.3]} {
+    if {[vercmp ${branch} == 8.1]} {
         patchfiles-append       patch-${php}-ext-gd.diff
     }
 
@@ -1104,7 +1104,7 @@ subport ${php}-gettext {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -1134,7 +1134,7 @@ subport ${php}-gmp {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -1169,7 +1169,7 @@ subport ${php}-iconv {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -1199,7 +1199,7 @@ subport ${php}-imap {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -1240,7 +1240,7 @@ subport ${php}-intl {
         7.4.33              {revision 2}
         8.0.30              {revision 1}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -1303,7 +1303,7 @@ subport ${php}-ipc {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -1329,7 +1329,7 @@ subport ${php}-ldap {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -1369,7 +1369,7 @@ subport ${php}-mbstring {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -1460,7 +1460,7 @@ subport ${php}-mysql {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -1656,7 +1656,7 @@ subport ${php}-odbc {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -1720,7 +1720,7 @@ if {[vercmp ${branch} >= 5.5]} {
             7.4.33              {revision 0}
             8.0.30              {revision 0}
             8.1.27              {revision 0}
-            8.2.15              {revision 0}
+            8.2.16              {revision 0}
             8.3.3               {revision 0}
         }
 
@@ -1776,7 +1776,7 @@ subport ${php}-openssl {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -1833,7 +1833,7 @@ subport ${php}-oracle {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -1875,7 +1875,7 @@ subport ${php}-pcntl {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -1908,7 +1908,7 @@ subport ${php}-posix {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -1935,7 +1935,7 @@ subport ${php}-postgresql {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -2081,7 +2081,7 @@ subport ${php}-pspell {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -2111,7 +2111,7 @@ subport ${php}-snmp {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -2141,7 +2141,7 @@ subport ${php}-soap {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -2174,7 +2174,7 @@ subport ${php}-sockets {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -2194,7 +2194,7 @@ subport ${php}-sodium {
         7.4.33              {revision 1}
         8.0.30              {revision 1}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -2233,7 +2233,7 @@ subport ${php}-sqlite {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -2285,7 +2285,7 @@ subport ${php}-tidy {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
@@ -2390,7 +2390,7 @@ subport ${php}-xsl {
         7.4.33              {revision 0}
         8.0.30              {revision 0}
         8.1.27              {revision 0}
-        8.2.15              {revision 0}
+        8.2.16              {revision 0}
         8.3.3               {revision 0}
     }
 
