R: non-functional: alignment in portfile

--- a/math/R/Portfile
+++ b/math/R/Portfile
@@ -268,10 +268,11 @@ variant quartz requires aqua conflicts x11 {
 variant java description {enable Java} {
     PortGroup java 1.0
 
-    configure.args-replace --disable-java --enable-java
+    configure.args-replace  --disable-java \
+                            --enable-java
 }
 
-default_variants +cairo +tcltk +openmp
+default_variants-append     +cairo +openmp +tcltk
 
 if {![variant_isset quartz]} {
     default_variants-append +x11
