R: unbreak aqua variant for < 10.10
Closes: https://trac.macports.org/ticket/69437

--- a/math/R/Portfile
+++ b/math/R/Portfile
@@ -9,7 +9,7 @@ name                        R
 # Remember to set revision to 0 when bumping version
 # And also to update Rversion in R PortGroup
 version                     4.3.3
-revision                    1
+revision                    2
 
 set branch                  [join [lrange [split ${version} .] 0 1] .]
 categories                  math science
@@ -63,6 +63,12 @@ compilers.setup             require_fortran
 # See related: https://skia.googlesource.com/skia/+/3490263287e9432119c501884e45840de4d986bc
 if {${os.platform} eq "darwin" && ${os.major} < 11} {
     patchfiles-append       patch-fix-10.6.diff
+}
+
+# https://trac.macports.org/ticket/69437
+# https://bugs.r-project.org/show_bug.cgi?id=18683
+if {${os.platform} eq "darwin" && ${os.major} < 14} {
+    patchfiles-append       patch-fix-10.9.diff
 }
 
 # We wanna ensure the same compiler is used for R itself and R packages.
@@ -272,16 +278,10 @@ variant java description {enable Java} {
                             --enable-java
 }
 
-default_variants-append     +cairo +openmp +tcltk
+default_variants-append     +aqua +cairo +openmp +tcltk
 
 if {![variant_isset quartz]} {
     default_variants-append +x11
-}
-
-# Version 4.3.3 with aqua won't build on 10.9
-# See: https://trac.macports.org/ticket/69437
-if {${os.platform} eq "darwin" && ${os.major} >= 14} {
-    default_variants-append +aqua
 }
 
 if {[variant_isset cairo] && [variant_isset x11]} {
