charm-qt5: attempt to fix build
Fixes: https://trac.macports.org/ticket/68990

--- a/office/charm/Portfile
+++ b/office/charm/Portfile
@@ -19,8 +19,11 @@ platforms           darwin
 subport ${name}-qt5 {
     PortGroup       qt5 1.0
 
+    revision        1
     conflicts       ${name}
     qt5.depends_component \
+                    qtmacextras \
+                    qtscript \
                     sqlite-plugin
     configure.args-append \
                     -DCHARM_FORCE_QT4:BOOL=OFF
