ImageMagick7: Update to 7.1.1-29
.

* Update 7.1.1-28 --> 7.1.1-29
* Add legacy support portgroup.
* Maybe fixes 10.6 builds. We will find out on 10.6 builders after merge.
* In description, add pointer to legacy ImageMagick (version 6) port.
* Clean up obsolete comments.

--- a/graphics/ImageMagick7/Portfile
+++ b/graphics/ImageMagick7/Portfile
@@ -5,6 +5,10 @@ PortGroup           conflicts_build 1.0
 PortGroup           github 1.0
 PortGroup           legacysupport 1.1
 
+# IM7 7.1.1-29, 2024 March, for OS 10.6/Snow Leopard;
+# TARGET_OS_IOS, TARGET_OS_WATCH, TARGET_OS_TV missing in TargetConditionals.h:
+legacysupport.newest_darwin_requires_legacy 10
+
 ###### OBSOLETE NOTE FROM IM6:
 # Keep relevant lines in sync between ImageMagick and p5-perlmagick.
 
