--- a/gnome/gjs/Portfile
+++ b/gnome/gjs/Portfile
@@ -22,8 +22,7 @@ maintainers         {devans @dbevans} {mascguy @mascguy} openmaintainer
 
 description         GNOME JavaScript/Spidermonkey bindings
 long_description    ${description}
-homepage            https://gitlab.gnome.org/GNOME/gjs/-/blob/master/doc/README.md \
-                    https://gjs-docs.gnome.org/gjs
+homepage            https://gjs-docs.gnome.org/gjs
 
 set py_ver          3.12
 set py_ver_nodot    [string map {. {}} ${py_ver}]
