sane-frontends: update to latest git revision
- contains build fixes for macOS 10.15

--- a/graphics/sane-frontends/Portfile
+++ b/graphics/sane-frontends/Portfile
@@ -2,6 +2,7 @@ PortSystem                  1.0
 
 name                        sane-frontends
 version                     1.0.15git
+revision                    1
 categories                  graphics
 platforms                   darwin
 # Some content is LGPL-2+ or public-domain, but the package as a whole is GPL-2+
@@ -22,10 +23,12 @@ long_description            These are the frontends for the Scanner Access Now \
 # sane-frontends from the official git repository is the
 # best bet for getting a compilable sane-frontends
 fetch.type                  git
-git.url                     https://gitlab.com/sane-project/frontends.git
-git.branch                  1928f945eefa3b97b5c76d586082435bb23c2969
+git.url                     https://gitlab.com/mklein-de/frontends.git
+git.branch                  141ef6bdcb8d1ccfff46e9981ff9f9f1fbfcfe1c
 
 depends_lib                 port:sane-backends
+
+depends_build-append        path:bin/pkg-config:pkgconfig
 
 configure.cppflags-append   -fno-common
 
