stellarium: fix ShowMySkyBuild against GLM 1.0.0

--- a/science/stellarium/Portfile
+++ b/science/stellarium/Portfile
@@ -59,6 +59,16 @@ depends_lib-append \
 # fix the install prefix for MP use only
 patchfiles-append patch-CMakeLists.txt.diff
 
+post-configure {
+    # ShowMySky with GLM 1.0.0 needs -DGLM_ENABLE_EXPERIMENTAL
+    # https://github.com/10110111/CalcMySky/pull/18
+    foreach file {ShowMySky/GLWidget.cpp common/EclipsedDoubleScatteringPrecomputer.cpp} {
+        system -W ${cmake.build_dir}/_deps/showmysky-qt5-src "grep -q GLM_ENABLE_EXPERIMENTAL ${file} ||
+        awk '/#include <glm\\/gtx\\/transform.hpp>/ { print \"#define GLM_ENABLE_EXPERIMENTAL\" } { print }'
+            < ${file} > ${file}.tmp && mv ${file}.tmp $file"
+    }
+}
+
 compiler.c_standard   2011
 compiler.cxx_standard 2017
 
