--- a/R/R-arrow/Portfile
+++ b/R/R-arrow/Portfile
@@ -4,7 +4,7 @@ PortSystem          1.0
 PortGroup           openssl 1.0
 PortGroup           R 1.0
 
-R.setup             cran apache arrow 13.0.0.1
+R.setup             cran apache arrow 15.0.1
 revision            0
 categories-append   devel
 maintainers         {@barracuda156 gmail.com:vital.had} openmaintainer
@@ -12,9 +12,9 @@ license             Apache-2
 description         Integration with Apache Arrow
 long_description    {*}${description}
 homepage            https://arrow.apache.org/docs/r
-checksums           rmd160  6142cc5690da001071917d638c74811bedef9656 \
-                    sha256  a6f0d325db5c82f180a504a0cc74b1182fe1c1bcc07a14eb5951d70d4fff08c0 \
-                    size    4170533
+checksums           rmd160  0f0d90b130b3c8561eaa4d0e4a5669494f6a2b65 \
+                    sha256  7f45843c820ff0418f9c64da6d9f82d1f14d7aceaf5032de3d3206582eb8171c \
+                    size    4373377
 
 depends_build-append \
                     port:pkgconfig
@@ -30,10 +30,14 @@ depends_lib-append  port:apache-arrow \
                     port:R-tidyselect \
                     port:R-vctrs
 
+# https://github.com/apache/arrow/issues/38769
+patchfiles          patch-fix-configure.diff
+
 compiler.cxx_standard 2017
 
 depends_test-append port:R-blob \
                     port:R-cli \
+                    port:R-curl \
                     port:R-DBI \
                     port:R-dbplyr \
                     port:R-decor \
