py-wxpython-4.0: Depend on wxWidgets 3.2 and skip building it

--- a/python/py-wxpython-4.0/Portfile
+++ b/python/py-wxpython-4.0/Portfile
@@ -2,6 +2,7 @@
 
 PortSystem          1.0
 PortGroup           python      1.0
+PortGroup           wxWidgets   1.0
 
 name                py-wxpython-4.0
 python.rootname     wxPython
@@ -36,6 +37,8 @@ if {${name} ne ${subport}} {
                     build_py.patch \
                     cython3.patch
 
+    wxWidgets.use   wxWidgets-3.2
+
     depends_build-append \
         port:py${python.version}-setuptools
 
@@ -45,6 +48,7 @@ if {${name} ne ${subport}} {
     }
 
     depends_lib-append \
+        port:${wxWidgets.port} \
         port:tiff
 
     depends_run-append \
@@ -56,11 +60,12 @@ if {${name} ne ${subport}} {
 
     build.env-append SIP=${python.prefix}/bin/sip
     build.env-append PATH=${python.prefix}/bin:$env(PATH)
+    build.env-append WX_CONFIG=${wxWidgets.wxconfig}
     set wxpython_options "--no_magic --release --python ${python.bin} --osx_cocoa --nodoc --prefix=${python.prefix}"
     build.cmd ${python.bin} build.py
-    build.target build ${wxpython_options}
+    build.target build_py ${wxpython_options}
     destroot.cmd ${python.bin} build.py
-    destroot.target install
+    destroot.target install_py
     destroot.destdir --destdir=${destroot} ${wxpython_options}
     
     post-destroot {
@@ -77,6 +82,10 @@ if {${name} ne ${subport}} {
     }
 
     post-patch {
+        reinplace "s|@@CC@@|${configure.cc}|" ${worksrcpath}/build.py
+        reinplace "s|@@CXX@@|${configure.cxx}|" ${worksrcpath}/build.py
+        reinplace "s|@@CFLAGS@@|${configure.cflags}|" ${worksrcpath}/build.py
+        reinplace "s|@@CXXFLAGS@@|${configure.cxxflags}|" ${worksrcpath}/build.py
         reinplace "s|MACOSX_DEPLOYMENT_TARGET = \"10.10\"|MACOSX_DEPLOYMENT_TARGET = \"${macosx_deployment_target}\"|" \
             ${worksrcpath}/wscript
         reinplace "s|--with-macosx-version-min=10.10|--with-macosx-version-min=${macosx_deployment_target}|" \
