py-wxpython-4.0: Fix compatibility with Python 3.12
Patch sip files that have been generated with a too old version of sip

See: https://github.com/wxWidgets/Phoenix/issues/2479

--- a/python/py-wxpython-4.0/Portfile
+++ b/python/py-wxpython-4.0/Portfile
@@ -35,7 +35,8 @@ if {${name} ne ${subport}} {
                     buildtools_config_py.patch \
                     buildtools_build_wxwidgets_py.patch \
                     build_py.patch \
-                    cython3.patch
+                    cython3.patch \
+                    sip.patch
 
     wxWidgets.use   wxWidgets-3.2
 
