kicad: Revert upstream fix to allow building against unpatched wxWidgets

--- a/science/kicad/Portfile
+++ b/science/kicad/Portfile
@@ -39,7 +39,8 @@ if {${name} eq ${subport}} {
         macports_prefix.patch \
         common-paths.cpp.patch \
         0001-cmake-adding-KICAD_MACOSX_APP_BUNDLE-option.patch \
-        0002-disable-codesigning.patch
+        0002-disable-codesigning.patch \
+        revert-upstream-wx-fix.patch
 
     depends_build-append \
         path:bin/doxygen:doxygen \
